# nornir-ios-xe

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md
inventory/: defaults.yaml  hosts.yaml
scripts/: first_tutorial.py  second_tutorial.py
