[tool.poetry]
name = "nornir-ios-xe"
version = "0.1.0"
description = "Nornir apps for automating ios-xe"
authors = ["kimdoanh89 <kimdoanh89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nornir = "^2.4.0"
httpx = "^0.14.1"

[tool.poetry.dev-dependencies]
bpython = "^0.19"
pdbpp = "^0.10.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
